
20 Mar 2007 - trunk
-------------------

* Fixed some collection variable names not printing with the parameter
  and/or counting operator in the debug log.

* Fixed potential memory corruption when expanding macros.

* Fixed error when a collection var was fetched in the same second as creation
  by setting the rate to zero.

* Fixed ASCIIZ (NUL) parsing for application/x-www-form-urlencoded forms

* Fixed the faulty REQUEST_FILENAME variable, which used to change
  the internal Apache structures by mistake.

* Updates to quiet some compiler warnings.

* Fixed some casting issues for compiling on NetWare (patch from Guenter Knauf).


23 Feb 2007 - 2.1.0
-------------------

* Removed the "Connection reset by peer" message, which has nothing
  to do with us. Actually the message was downgraded from ERROR to
  NOTICE so it will still appear in the debug log.

* Removed the (harmless) message mentioning LAST_UPDATE_TIME missing.

* It was not possible to remove a rule placed in phase 4 using
  SecRuleRemoveById or SecRuleRemoveByMsg. Fixed.

* Fixed a problem with incorrectly setting requestBodyProcessor using
  the ctl action.

* Bundled Core Rules 2.1-1.3.2b4.

* Updates to the reference manual.

* Reversed the return values of @validateDTD and @validateSchema, to
  make them consistent with other operators.

* Added a few helpful debug messages in the XML validation area.

* Updates to the reference manual.

* Fixed the validateByteRange operator.

* Default value for the status action is now 403 (as it was supposed to
  be but it was effectively 500).

* Rule exceptions (removing using an ID range or an regular expression)
  is now applied to the current context too. (Previously it only worked
  on rules that are inherited from the parent context.)

* Fix of a bug with expired variables.

* Fixed regular expression variable selectors for many collections.

* Performance improvements - up to two times for real-life work loads!
